js complete hw-07

--- a/hw-07/styles.css
+++ b/hw-07/styles.css
@@ -48,3 +48,19 @@ Task 3
   max-height: 222px;
   width: 100%;
 }
+
+/* 
+Task 06
+*/
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
