--- a/hw-07/styles.css
+++ b/hw-07/styles.css
@@ -22,18 +22,18 @@ img {
   vertical-align: top;
 }
 
+ul {
+  list-style: none;
+}
+
 /* 
 Task 3
 */
 
 #gallery {
-  list-style: none;
   margin: 0;
   padding: 0;
   margin-top: 30px;
-}
-
-.gallery-container {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
